--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 @import "compass";
 @import "partials/variables";
+@import "partials/fonts";
 @import "partials/normalize";
 @import "partials/base";
 @import "partials/layout";
